--- a/index.html
+++ b/index.html
@@ -40,105 +40,105 @@
 
       <div class="image_display">
       <figure>
-      <img class="image" src="images/Knight.jpg">
+      <img class="image" src="Images/Knight.jpg">
       <figcaption class="caption">
         Digital: Knight in Shining Armor 
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Hungry.jpg">
+      <img class="image" src="Images/Hungry.jpg">
       <figcaption class="caption">
         Digital:Hungry
       </figcaption>
     </figure>
 
     <figure>
-      <img class="image" src="images/CHAIR.png">
+      <img class="image" src="Images/CHAIR.png">
       <figcaption class="caption">
         Digital: Chair
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Child.jpg">
+      <img class="image" src="Images/Child.jpg">
       <figcaption class="caption">
         Digital: Child
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Comic.png">
+      <img class="image" src="Images/Comic.png">
       <figcaption class="caption">
         Digital: Grapes of Wrath Comic Strip
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Dancing.jpg">
+      <img class="image" src="Images/Dancing.jpg">
       <figcaption class="caption">
         Digital: Dancing 
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Ink & Paper_SITSTANDFALL.jpg">
+      <img class="image" src="Images/Ink & Paper_SITSTANDFALL.jpg">
       <figcaption class="caption">
         Ink & Paper: Sit Stand Fall
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/Light_wIZARD.jpg">
+      <img class="image" src="Images/Light_wIZARD.jpg">
       <figcaption class="caption">
         Digital: Light Wizard 
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/New Media_STAN.png">
+      <img class="image" src="Images/New Media_STAN.png">
       <figcaption class="caption">
         Digital: STAN
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/New Media_Step.gif">
+      <img class="image" src="Images/New Media_Step.gif">
       <figcaption class="caption">
         Digital: Step 
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/New Media_Symbol_2.jpg">
+      <img class="image" src="Images/New Media_Symbol_2.jpg">
       <figcaption class="caption">
         Digital: Symbol
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/RAinboy.gif">
+      <img class="image" src="Images/RAinboy.gif">
       <figcaption class="caption">
         Digital: Rainboy
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/TOTO-1.jpg">
+      <img class="image" src="Images/TOTO-1.jpg">
       <figcaption class="caption">
         Digital: TOTO
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/WALKING_4.gif">
+      <img class="image" src="Images/WALKING_4.gif">
       <figcaption class="caption">
         Digital: An Evening Stroll
       </figcaption>
      </figure>
 
      <figure>
-      <img class="image" src="images/IkEa_LADY.png">
+      <img class="image" src="Images/IkEa_LADY.png">
       <figcaption class="caption">
         Digital: Ghouls on Ikea
       </figcaption>
