--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         Digital: Chair
       </figcaption>
      </figure>
+             <figure>
+      <img class="image" src="Images/Mexico City.jpg">
+      <figcaption class="caption">
+        Digital: Mexico City Shop
+      </figcaption>
+     </figure>
+
+             <figure>
+      <img class="image" src="Images/Potrait.jpg">
+      <figcaption class="caption">
+        Digital: Alice Neel Inspired Potrait
+      </figcaption>
+     </figure>
+
 
      <figure>
       <img class="image" src="Images/Child.jpg">
