--- a/Sketches.html
+++ b/Sketches.html
@@ -4,7 +4,7 @@
         <title>Sketches</title>
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="ICO.ico"/>
+        <link rel="icon" href="ICO_2.ico"/>
 </head>
     <body>
       <div class="header_container">
