--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
         Digital: Child
       </figcaption>
      </figure>
+          
+           <figure>
+      <img class="image" src="Images/Reading.png">
+      <figcaption class="caption">
+        Digital:Reading
+      </figcaption>
+    </figure>
 
      <figure>
       <img class="image" src="Images/Comic.png">
@@ -106,6 +113,13 @@
       <img class="image" src="Images/Light_wIZARD.jpg">
       <figcaption class="caption">
         Digital: Light Wizard 
+      </figcaption>
+     </figure>
+          
+            <figure>
+      <img class="image" src="Images/Bag.png">
+      <figcaption class="caption">
+        Digital: Bag
       </figcaption>
      </figure>
 
