--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
      </figure>
           
             <figure>
-      <img class="image" src="Images/Bag.png">
+      <img class="image" src="Images/Purse.png">
       <figcaption class="caption">
         Digital: Bag
       </figcaption>
