--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@
       </figcaption>
      </figure>
           
-            <figure>
+      <figure>
       <img class="image" src="Images/Purse.png">
       <figcaption class="caption">
-        Digital: Bag
+        Digital: Purse
       </figcaption>
      </figure>
+
+
 
      <figure>
       <img class="image" src="Images/New Media_STAN.png">
