--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
              <figure>
       <img class="image" src="Images/Potrait.jpg">
       <figcaption class="caption">
-        Digital: Alice Neel Inspired Potrait
+        Pen and Ink: Alice Neel Inspired Potrait
       </figcaption>
      </figure>
 
