--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
      <figure onclick="resizeImage(this)" >
 
-    <img class="image" src="images/IkEa_LADY.png"  >
+    <img class="image" src="Images/IkEa_LADY.png" >
    <figcaption class="caption">
        Digital: Ghouls on Ikea
     </figcaption>
