--- a/Illustration.html
+++ b/Illustration.html
@@ -63,7 +63,7 @@
             Zalek
             <p class="date">8/05/2022</p>
         </figcaption>
-        <img src="Images/Zalek.jpg"> 
+        <img src="Images/ZALEK.jpg"> 
     </figure>
 
     <figure>
