--- a/Illustration.html
+++ b/Illustration.html
@@ -87,7 +87,7 @@
           Chair 
             <p class="date">09/21/2022</p>
         </figcaption>
-        <img src="Images/Chair.png"> 
+        <img src="Images/CHAIR.png"> 
     </figure>
 
     <figure>
