--- a/Animation.html
+++ b/Animation.html
@@ -41,7 +41,13 @@
             </figcaption>
         <img src="Animations/Step.gif"> 
     </figure>
-
+       <figure>
+            <figcaption>
+               Bridge @ Night
+                <p class="date">07/16/2022</p>
+            </figcaption>
+        <img src="Animations/Bridge@night.gif"> 
+    </figure>
     <figure>
         <figcaption>
            Desert
